--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           <li><a href="#/log-in">Log In</a></li>
           <li><a href="#/sign-up">Sign Up</a></li>
         </ul>
-        <h3 class="text-muted">join me gulp webapp</h3>
+        <h3 class="text-muted">Join Me</h3>
       </div>
       <div ng-view class="content-wrapper"></div>
       <div class="footer">
