--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,8 @@
     <script src="scripts/main.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
+    <script src="scripts/services.js"></script>
+
 
     <!-- endbuild -->
   </body>
