Switch from ng-router to angular-ui-router

--- a/app/index.html
+++ b/app/index.html
@@ -30,8 +30,8 @@
       <div class="header">
         <ul class="nav nav-pills pull-right">
           <li class="active"><a href="#/welcome">Home</a></li>
-          <li><a href="#/log-in">Log In</a></li>
-          <li><a href="#/sign-up">Sign Up</a></li>
+          <li><a ui-sref="login">Log In</a></li>
+          <li><a ui-sref="signup">Sign Up</a></li>
         </ul>
         <h3 class="text-muted">Join Me</h3>
       </div>
@@ -53,6 +53,7 @@
     <script src="/bower_components/angular-route/angular-route.js"></script>
     <script src="/bower_components/firebase/firebase.js"></script>
     <script src="/bower_components/angularfire/dist/angularfire.js"></script>
+    <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
