Switch from ng-router to ui-router working

--- a/app/index.html
+++ b/app/index.html
@@ -29,14 +29,14 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#/welcome">Home</a></li>
+          <li class="active"><a ui-sref="welcome">Home</a></li>
           <li><a ui-sref="login">Log In</a></li>
           <li><a ui-sref="signup">Sign Up</a></li>
         </ul>
         <h3 class="text-muted">Join Me</h3>
       </div>
 
-      <div ng-view class="content-wrapper"></div>
+      <div ui-view class="content-wrapper"></div>
       <div class="footer">
         <p>@ 2016, Lula Leus</p>
       </div>
