--- a/app/index.html
+++ b/app/index.html
@@ -26,17 +26,22 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
+    <div class="container" ng-controller="WelcomeController as WelcomeCtrl">
       <div class="header">
-        <ul class="nav nav-pills pull-right">
+        <!--<div ui-view="menu" id="main-menu"></div>-->
+
+        <ul class="nav nav-pills pull-right" >
           <li class="active"><a ui-sref="welcome">Home</a></li>
-          <li><a ui-sref="login">Log In</a></li>
-          <li><a ui-sref="signup">Sign Up</a></li>
+          <li ng-hide="authData"><a ui-sref="login">Log In</a></li>
+          <li ng-show="authData"><a ui-sref="login">Log Out</a></li>
+          <li ng-hide="authData"><a ui-sref="signup">Sign Up</a></li>
+          <li ng-show="authData"><a ui-sref="signup">Create Event</a></li>
+
         </ul>
         <h3 class="text-muted">Join Me</h3>
       </div>
 
-      <div ui-view class="content-wrapper"></div>
+      <div ui-view id="main-content-wrapper"></div>
       <div class="footer">
         <p>@ 2016, Lula Leus</p>
       </div>
