Creation of event page

--- a/app/index.html
+++ b/app/index.html
@@ -33,9 +33,9 @@
         <ul class="nav nav-pills pull-right" >
           <li class="active"><a ui-sref="welcome">Home</a></li>
           <li ng-hide="authData"><a ui-sref="login">Log In</a></li>
-          <li ng-show="authData"><a ui-sref="login">Log Out</a></li>
+          <li ng-show="authData"><a ui-sref="welcome">Log Out</a></li>
           <li ng-hide="authData"><a ui-sref="signup">Sign Up</a></li>
-          <li ng-show="authData"><a ui-sref="signup">Create Event</a></li>
+          <li ng-show="authData"><a ui-sref="event">Create Event</a></li>
 
         </ul>
         <h3 class="text-muted">Join Me</h3>
