--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,10 @@
 
     <div class="container" ng-controller="WelcomeController as WelcomeCtrl">
       <div class="header">
-        <!--<div ui-view="menu" id="main-menu"></div>-->
-
         <ul class="nav nav-pills pull-right" >
           <li class="active"><a ui-sref="welcome">Home</a></li>
           <li ng-hide="authData"><a ui-sref="login">Log In</a></li>
-          <li ng-show="authData"><a ui-sref="welcome">Log Out</a></li>
+          <li ng-show="authData"><a href="#" ng-click="authObj.$unauth()">Log Out</a></li>
           <li ng-hide="authData"><a ui-sref="signup">Sign Up</a></li>
           <li ng-show="authData"><a ui-sref="event">Create Event</a></li>
 
