--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
 
     <div class="container" ng-controller="WelcomeController as WelcomeCtrl">
       <div class="header">
-        <ul class="nav nav-pills pull-right" >
-          <li class="active"><a ui-sref="welcome">Home</a></li>
-          <li ng-hide="authData"><a ui-sref="login">Log In</a></li>
+        <ul class="nav nav-pills pull-right" ng-cloak >
+          <li class="active" set-active><a ui-sref="welcome">Home</a></li>
+          <li ng-hide="authData" set-active><a ui-sref="login">Log In</a></li>
           <li ng-show="authData"><a href="#" ng-click="authObj.$unauth()">Log Out</a></li>
-          <li ng-hide="authData"><a ui-sref="signup">Sign Up</a></li>
-          <li ng-show="authData"><a ui-sref="event">Create Event</a></li>
+          <li ng-hide="authData" set-active><a ui-sref="signup">Sign Up</a></li>
+          <li ng-show="authData" set-active><a ui-sref="event">Create Event</a></li>
 
         </ul>
         <h3 class="text-muted">Join Me</h3>
@@ -80,6 +80,7 @@
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/services.js"></script>
+    <script src="scripts/directives.js"></script>
 
 
     <!-- endbuild -->
