Separation of controllers

--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,10 @@
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
     <script src="scripts/app.js"></script>
-    <script src="scripts/controllers.js"></script>
+    <script src="scripts/controllers/welcomeCtrl.js"></script>
+    <script src="scripts/controllers/authCtrl.js"></script>
+    <script src="scripts/controllers/eventCtrl.js"></script>
+
     <script src="scripts/services.js"></script>
 
 
