--- a/app/index.html
+++ b/app/index.html
@@ -82,7 +82,11 @@
     <script src="scripts/controllers/authCtrl.js"></script>
     <script src="scripts/controllers/eventCtrl.js"></script>
 
-    <script src="scripts/services.js"></script>
+    <script src="scripts/services/authFactory.js"></script>
+    <script src="scripts/services/eventsFactory.js"></script>
+    <script src="scripts/services/usersFactory.js"></script>
+    <script src="scripts/services/validateService.js"></script>
+
 
 
     <!-- endbuild -->
