Project structure reorganising

--- a/app/index.html
+++ b/app/index.html
@@ -85,6 +85,7 @@
     <script src="scripts/services/authFactory.js"></script>
     <script src="scripts/services/eventsFactory.js"></script>
     <script src="scripts/services/usersFactory.js"></script>
+    <script src="scripts/services/validateRulesService.js"></script>
     <script src="scripts/services/validateService.js"></script>
 
 
