--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,8 @@
     <script src="/bower_components/firebase/firebase.js"></script>
     <script src="/bower_components/angularfire/dist/angularfire.js"></script>
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="/bower_components/bootstrap-ui-datetime-picker/dist/datetime-picker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
