--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
     <script src="scripts/services/validateRulesService.js"></script>
     <script src="scripts/services/validateService.js"></script>
 
-
+    <script src="scripts/directives/inputFocusDirective.js"></script>
 
     <!-- endbuild -->
 
