--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
     <script src="scripts/services/usersFactory.js"></script>
     <script src="scripts/services/validateRulesService.js"></script>
     <script src="scripts/services/validateService.js"></script>
+    <script src="scripts/services/eventModelService.js"></script>
 
     <script src="scripts/directives/inputFocusDirective.js"></script>
 
