Feat: animation with Proton.js
I want to energize the project with background animation. Possibility of
using Proton.js is tested.

--- a/app/index.html
+++ b/app/index.html
@@ -75,6 +75,7 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
+    <script src="/bower_components/Proton/build/proton-1.0.0.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
@@ -91,6 +92,7 @@
     <script src="scripts/services/eventModelFactory.js"></script>
 
     <script src="scripts/directives/inputFocusDirective.js"></script>
+    <script src="scripts/directives/circlesAnimation.js"></script>
 
     <!-- endbuild -->
 
