Refactor: changes of file names to more meaningful

--- a/app/index.html
+++ b/app/index.html
@@ -85,11 +85,11 @@
     <script src="scripts/controllers/authCtrl.js"></script>
     <script src="scripts/controllers/eventCtrl.js"></script>
 
-    <script src="scripts/services/authFactory.js"></script>
-    <script src="scripts/services/eventsFactory.js"></script>
-    <script src="scripts/services/validateRulesService.js"></script>
-    <script src="scripts/services/validateService.js"></script>
-    <script src="scripts/services/eventModelFactory.js"></script>
+    <script src="scripts/services/Auth.js"></script>
+    <script src="scripts/services/Events.js"></script>
+    <script src="scripts/services/ValidateRules.js"></script>
+    <script src="scripts/services/Validation.js"></script>
+    <script src="scripts/services/EventModel.js"></script>
 
     <script src="scripts/directives/inputFocus.js"></script>
     <script src="scripts/directives/circlesAnimation.js"></script>
